[package]
name = "dg_xch_utils"
version = "1.0.1"
edition = "2021"
authors = ["James Hoerr"]
description = "Collection of Utilties for the Chia Blockchain writen in Rust"

[dependencies]
actix-web = "4.2.1"
async-trait = "0.1.58"
bech32 = "0.9.1"
bip39 = "1.0.1"
blake3 = "1.3.1"
bls12_381 = "0.7.0"
blst = "0.3.7"
chrono = "0.4.22"
hkdf = "0.12.3"
futures-util = "0.3.25"
hex = "0.4.3"
hyper = {version="0.14.23", features=["full"]}
lazy_static = "1.4.0"
libc = "0.2.139"
log = "0.4.17"
nix = "0.26.2"
num-bigint = "=0.4.0"
num-integer = "0.1.45"
num-traits = "=0.2.14"
paperclip = { version = "0.8.0", features = ["actix4"] }
poll-promise = "0.1"
rayon = "1.7.0"
regex = "1.7.1"
reqwest = {version="0.11.11", features=["json", "rustls-tls-webpki-roots"]}
rustls = {version = "0.20.7", features = [] }
rustls-pemfile = "1.0.1"
rustls-webpki = "0.100.0-alpha.2"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
simple_logger = "4.0.0"
tokio = {version = "1.21.2", features=["rt-multi-thread", "macros", "process", "time", "fs"]}
tokio-tungstenite = {version = "0.18.0", features = ["rustls-tls-webpki-roots", "rustls"] }
tokio-rustls = {version = "0.23.4", features = [] }
uuid = {version="1.2.2", features=["v4"]}
webpki-roots = "0.22.6"

[features]
async_io = []