[workspace]

members = [
    "dg_xch_cli",
    "dg_xch_clients",
    "dg_xch_core",
    "dg_xch_macros",
    "dg_xch_pos",
    "dg_xch_serialize",
]

[workspace.dependencies]
actix-web = "4.2.1"
async-trait = "0.1.58"
bech32 = "0.9.1"
bip39 = {version= "2.0.0", features=["rand"] }
blake3 = "1.3.1"
bls12_381 = "0.8.0"
blst = "0.3.7"
bytes = "1.4.0"
clap = { version = "4.1.1", features = ["derive"] }
#cuda_std = "0.2.2"
dg_xch_cli = {path="./dg_xch_cli"}
dg_xch_clients = {path="./dg_xch_clients"}
dg_xch_core = {path="./dg_xch_core"}
dg_xch_macros = {path="./dg_xch_macros"}
dg_xch_pos = {path="./dg_xch_pos"}
dg_xch_serialize = {path="./dg_xch_serialize"}
hkdf = "0.12.3"
futures-util = "0.3.25"
hex = "0.4.3"
hyper = {version="0.14.23", features=["full"]}
lazy_static = "1.4.0"
log = "0.4.17"
nix = "0.26.2"
num-bigint = "=0.4.0"
num-integer = "0.1.45"
num-traits = "=0.2.14"
rayon = "1.7.0"
regex = "1.7.1"
reqwest = {version="0.11.11", features=["json", "rustls-tls-webpki-roots"]}
rustls = {version = "0.20.7", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.1"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
simple_logger = "4.0.0"
time = "0.3.21"
tokio = {version = "1.21.2", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-tungstenite = {version = "0.18.0", features = ["rustls-tls-webpki-roots", "rustls"] }
uuid = {version="1.2.2", features=["v4"]}
webpki-roots = "0.23.0"