[package]
name = "dg_xch_cli"
version = "2.1.1"
edition = "2021"
authors = ["James Hoerr"]
description = "CLI Utilities for the Chia Blockchain"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[lib]
name = "dg_xch_cli_lib"
path = "src/lib.rs"

[[bin]]
name = "dg_xch_cli"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.86"
bip39 = {version= "2.1.0", features=["rand"] }
blst = { version = "0.3.14", features = ["portable"] }
clap = { version = "4.5.30", features = ["derive"] }
dashmap = "6.1.0"
dialoguer = "0.11.0"
dg_logger = { path="../logging", version="2.1.1" }
dg_xch_clients = {path = "../clients", version="2.1.1"}
dg_xch_core = {path = "../core", version = "2.1.1", default-features = false}
dg_xch_keys = {path = "../keys", version="2.1.1"}
dg_xch_puzzles = {path = "../puzzles", version="2.1.1"}
dg_xch_serialize= {path = "../serialize", version="2.1.1"}
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.26"
num-traits = "0.2.19"
rand = "0.8.5"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = {version = "1.43.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}