[package]
name = "dg_xch_clients"
version = "2.0.1"
edition = "2021"
authors = ["James Hoerr"]
description = "RPC and Websocket Clients the Chia Blockchain"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[dependencies]
async-trait = "0.1.77"
blst = "0.3.11"
dashmap = "5.5.3"
dg_xch_core = {path = "../core", version = "2.0.1", default-features = false}
dg_xch_keys = {path = "../keys", version="2.0.1"}
dg_xch_macros = {path = "../macros", version="2.0.1"}
dg_xch_pos = {path = "../proof_of_space", version="2.0.1"}
dg_xch_serialize = {path = "../serialize", version="2.0.1"}
futures-util = "0.3.30"
hex = "0.4.3"
hyper = {version="1.1.0", features=["full"]}
hyper-util = {version="0.1.3", features=["full"]}
log = "0.4.20"
prometheus = {version="0.13.3", features=["protobuf"], optional = true}
reqwest = {version="0.11.24", default-features = false, features =["rustls-tls-webpki-roots", "json"]}
rustls = {version = "0.21.10", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = "0.3.34"
tokio = {version = "1.36.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-tungstenite = {version = "0.20.1", features = ["rustls-tls-webpki-roots", "rustls"] }
urlencoding = "2.1.3"
uuid = {version="1.7.0", features=["v4"]}

[features]
metrics = ["dep:prometheus", "dg_xch_core/metrics"]
default = []