[package]
name = "dg_xch_clients"
version = "2.2.0"
edition = "2021"
authors = ["James Hoerr"]
description = "RPC and Websocket Clients the Chia Blockchain"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[dependencies]
async-trait = "0.1.89"
blst = { version = "0.3.15", features = ["portable"] }
dg_xch_core = {path = "../core", version = "2.2.0", default-features = false}
dg_xch_keys = {path = "../keys", version="2.2.0"}
dg_logger = {path = "../logging", version="2.2.0"}
dg_xch_pos = {path = "../proof_of_space", version="2.2.0"}
dg_xch_serialize = {path = "../serialize", version="2.2.0"}
futures-util = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
prometheus = {version="0.14.0", features=["protobuf"], optional = true}
reqwest = {version="0.12.23", default-features = false, features = ["rustls-tls", "json"] }
rustls = {version = "0.23.31" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = {version = "1.47.1", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-tungstenite = {version = "0.26.2", features = ["rustls", "rustls-tls-webpki-roots"] }
urlencoding = "2.1.3"
uuid = {version="1.18.0", features=["v4"]}

[features]
metrics = ["dep:prometheus", "dg_xch_core/metrics"]
default = []