[package]
name = "dg_xch_cli"
version = "1.0.1"
edition = "2021"
authors = ["James Hoerr"]
description = "CLI Utilities for the Chia Blockchain"

[dependencies]
bip39.workspace = true
blst.workspace = true
clap.workspace = true
dg_xch_clients.workspace = true
dg_xch_core.workspace = true
lazy_static.workspace = true
log.workspace = true
rayon.workspace = true
simple_logger.workspace = true
tokio.workspace = true