[package]
name = "dg_xch_puzzles"
version = "1.0.1"
edition = "2021"
authors = ["James Hoerr"]
description = "Collection of Utilties for the Chia Blockchain"

[dependencies]
blst.workspace = true
dg_xch_core.workspace = true
dg_xch_serialize.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
tokio.workspace = true