[package]
name = "dg_xch_fast_farmer"
version = "1.0.1"
edition = "2021"
authors = ["James Hoerr"]
description = "Proof of Space library for the Chia Blockchain"


[dependencies]
blake3.workspace = true
blst.workspace = true
dg_xch_serialize.workspace = true
dg_xch_clients.workspace = true
dg_xch_core.workspace = true
hex.workspace = true
lazy_static.workspace = true
log.workspace = true
nix.workspace = true
num-traits.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
simple_logger.workspace = true
tokio.workspace = true