[package]
name = "dg_xch_gui"
version = "2.1.0"
edition = "2021"
authors = ["James Hoerr"]
description = "GUI for the dg_xch_utils"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[[bin]]
name = "dg_xch_gui"
path = "src/main.rs"

[dependencies]
blst = { version = "0.3.14", features = ["portable"] }
dg_logger = { path="../logging", version="2.0.3" }
dg_xch_clients = {path = "../clients", version="2.0.3"}
dg_xch_core = {path = "../core", version = "2.0.3", default-features = false}
dg_xch_keys = {path = "../keys", version="2.0.3"}
eframe = "0.31.0"
log = "0.4.26"
serde = "1.0.218"
tokio = {version = "1.43.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
serde_yaml = "0.9.34"
egui_plot = "0.31.0"
arboard = "3.4.1"