[package]
name = "dg_xch_keys"
version = "1.2.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Key Management Utils the Chia Blockchain"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils/keys"

[dependencies]
bech32 = "0.9.1"
blst = "0.3.11"
bip39 = {version= "2.0.0", features=["rand"] }
dg_xch_core = {path = "../core", version = "1.2.0", features = ["paperclip"] }
dg_xch_puzzles = {path = "../puzzles", version="1.2.0"}
hkdf = "0.12.3"
sha2 = "0.10.8"