[package]
name = "dg_xch_keys"
version = "2.0.1"
edition = "2021"
authors = ["James Hoerr"]
description = "Key Management Utils the Chia Blockchain"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils/keys"

[dependencies]
bech32 = "0.9.1"
blst = { version = "0.3.11", features = ["portable"] }
bip39 = {version= "2.0.0", features=["rand"] }
dg_xch_core = {path = "../core", version = "2.0.1", features = ["paperclip"] }
dg_xch_puzzles = {path = "../puzzles", version="2.0.1"}
hkdf = "0.12.3"
sha2 = "0.10.8"