[package]
name = "dg_logger"
version = "2.0.3"
edition = "2024"

[dependencies]
log = { version = "0.4"}
time = { version = "0.3", features = ["local-offset", "serde"]}
colored = { version = "3.0", optional = true}
tokio = "1.44"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
default = ["color"]
color = ["colored"]
