[package]
name = "dg_logger"
version = "2.2.0"
edition = "2024"
description = "Druid Garden Logging Library"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[dependencies]
log = { version = "0.4.27"}
time = { version = "0.3.41", features = ["local-offset", "serde","macros","parsing","formatting"]}
colored = { version = "3.0", optional = true}
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal","process","sync"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[features]
default = ["color"]
color = ["colored"]
