[package]
name = "dg_xch_macros"
version = "1.0.4"
edition = "2021"
description = "Derive Marcos for Chia Serialization"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils/macros"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.58"
