[package]
name = "dg_xch_macros"
version = "2.0.0"
edition = "2021"
description = "Derive Marcos for Chia Serialization"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils/macros"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.109"
quote = "1.0.33"
proc-macro2 = "1.0.69"
