[package]
name = "dg_xch_macros"
version = "2.1.0"
edition = "2021"
description = "Derive Marcos for Chia Serialization"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.109"
quote = "1.0.38"
proc-macro2 = "1.0.93"
