[package]
name = "dg_xch_pos"
version = "2.0.2"
edition = "2021"
authors = ["James Hoerr"]
description = "Proof of Space library for the Chia Blockchain"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[dependencies]
async-trait = "0.1.77"
blake3 = "1.5.0"
dg_xch_core = {path = "../core", version = "2.0.2", default-features = false }
dg_xch_serialize = {path = "../serialize", version="2.0.2"}
futures-util = "0.3.30"
hex = "0.4.3"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.20"
num-traits = "0.2.18"
once_cell = "1.19.0"
oneshot = "0.1.6"
parking_lot = "0.12.1"
rand = "0.8.5"
rayon = "1.8.1"
rustc-hash = "1.1.0"
sha2 = "0.10.8"
simple_logger = "4.3.3"
tokio = {version = "1.36.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net", "io-util"]}
windows-sys = { version = "0.52.0", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["stable"] }

[[bench]]
name = "compression"
harness = false