[package]
name = "dg_xch_pos"
version = "2.1.3"
edition = "2021"
authors = ["James Hoerr"]
description = "Proof of Space library for the Chia Blockchain"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[dependencies]
async-trait = "0.1.86"
blake3 = "1.6.0"
dg_xch_core = {path = "../core", version = "2.1.3", default-features = false }
futures-util = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
libc = "0.2.170"
log = "0.4.26"
num-traits = "0.2.19"
once_cell = "1.20.3"
parking_lot = "0.12.3"
rand = "0.8.5"
rayon = "1.10.0"
rustc-hash = "2.1.1"
time = "0.3.37"
tokio = {version = "1.43.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net", "io-util"]}
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["stable"] }

[[bench]]
name = "compression"
harness = false