[package]
name = "dg_xch_pos"
version = "2.2.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Proof of Space library for the Chia Blockchain"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[dependencies]
async-trait = "0.1.89"
blake3 = "1.8.2"
dg_xch_core = {path = "../core", version = "2.2.0", default-features = false }
futures-util = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
libc = "0.2.171"
log = "0.4.27"
num-traits = "0.2.19"
once_cell = "1.21.3"
parking_lot = "0.12.4"
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"
time = "0.3.41"
tokio = {version = "1.47.1", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net", "io-util"]}
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["stable"] }

[[bench]]
name = "compression"
harness = false