[package]
name = "dg_xch_puzzles"
version = "2.2.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Core library for working with CLVM puzzles"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[dependencies]
blst = { version = "0.3.15", features = ["portable"] }
dg_xch_core = {path = "../core", version = "2.2.0", default-features = false}
dg_xch_serialize = {path = "../serialize", version="2.2.0"}
lazy_static = "1.5.0"
log = "0.4.27"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
tokio = {version = "1.47.1", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}