[package]
name = "dg_xch_serialize"
version = "2.2.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Low Level Support Package for dg_xch_utils"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[dependencies]
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.41"