[package]
name = "dg_xch_servers"
version = "2.0.2"
edition = "2021"
authors = ["James Hoerr"]
description = "Library for Creating Servers compatible with Chia's RPC and Websocket Protocols"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[dependencies]
async-trait = "0.1.77"
blst = { version = "0.3.11", features = ["portable"] }
dg_xch_core = {path = "../core", version = "2.0.2", default-features = false }
dg_xch_clients = {path = "../clients", version = "2.0.2" }
dg_xch_keys = {path = "../keys", version = "2.0.2" }
dg_xch_pos = {path = "../proof_of_space", version = "2.0.2" }
dg_xch_serialize = {path = "../serialize", version = "2.0.2" }
http-body-util = { version = "0.1"}
hex = "0.4.3"
hyper = {version="1.1.0", features=["full"]}
hyper-tungstenite = "0.12.0"
hyper-util = {version="0.1.3", features=["full"]}
log = "0.4.20"
prometheus = {version="0.13.3", features=["protobuf"], optional = true}
rustls = {version = "0.21.10", features = ["dangerous_configuration"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = {version = "1.36.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-rustls = {version = "0.24.1", features = [] }
tokio-tungstenite = {version = "0.20.1", features = ["rustls-tls-webpki-roots", "rustls"] }
uuid = {version="1.7.0", features=["v4"]}

[features]
metrics = ["dep:prometheus", "dg_xch_core/metrics", "dg_xch_clients/metrics"]
default = []