[package]
name = "dg_xch_servers"
version = "2.0.3"
edition = "2021"
authors = ["James Hoerr"]
description = "Library for Creating Servers compatible with Chia's RPC and Websocket Protocols"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_xch_utils"
repository = "https://github.com/GalactechsLLC/dg_xch_utils"

[dependencies]
async-trait = "0.1.86"
blst = { version = "0.3.14", features = ["portable"] }
dg_xch_core = {path = "../core", version = "2.0.3", default-features = false }
dg_xch_clients = {path = "../clients", version = "2.0.3" }
dg_xch_keys = {path = "../keys", version = "2.0.3" }
dg_xch_pos = {path = "../proof_of_space", version = "2.0.3" }
dg_xch_serialize = {path = "../serialize", version = "2.0.3" }
http-body-util = { version = "0.1.2"}
hex = "0.4.3"
http = "1.2.0"
hyper = {version="1.6.0", features=["full"]}
hyper-tungstenite = "0.17.0"
hyper-util = {version="0.1.10", features=["full"]}
log = "0.4.26"
prometheus = {version="0.13.4", features=["protobuf"], optional = true}
rustls = {version = "0.23.23" }
tokio = {version = "1.43.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-rustls = {version = "0.26.1", features = [] }
tokio-tungstenite = {version = "0.26.2", features = ["rustls"] }
uuid = {version="1.14.0", features=["v4"]}

[features]
metrics = ["dep:prometheus", "dg_xch_core/metrics", "dg_xch_clients/metrics"]
default = []