[package]
name = "dg_xch_simulator"
version = "2.1.3"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "dg_xch_simulator_lib"

[[bin]]
path = "src/main.rs"
name = "dg_xch_simulator"

[dependencies]
dg_logger = { path="../logging", version="2.1.2" }
log = "0.4.26"
portfu = { version = "1.3.0" }
tokio = {version = "1.43.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
