[package]
name = "dg_xch_simulator"
version = "2.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "dg_xch_simulator_lib"

[[bin]]
path = "src/main.rs"
name = "dg_xch_simulator"

[dependencies]
dg_logger = { path="../logging", version="2.2.0" }
log = "0.4.27"
portfu = { version = "1.3.3" }
tokio = {version = "1.47.1", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
